--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,23 @@
-<p>navbar works!</p>
+<div class="navbar">
+  <div class="navbar__left">
+    <img src="assets/logo.png" class="navbar__left__logo" alt="">
+    <span class="navbar__left__title text--white">WM22</span>
+  </div>
+  <div class="navbar__right">
+    <button mat-button class="navbar__button">
+      <span class="material-icons">home</span>
+      <span>Startseite</span>
+    </button>
+    <button mat-button class="navbar__button">
+      <span class="material-icons">check</span>
+      <span>Vorhersagen</span>
+    </button>
+    <button mat-button class="navbar__button">
+      <span class="material-icons">info</span>
+      <span>Login</span>
+    </button>
+    <button mat-button class="navbar__button">
+      <span class="material-icons">info</span>
+    </button>
+  </div>
+</div>
