--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<p>Hello</p>
+<button mat-icon-button (click)="openDialog()" class="bot__dialog">
+  <mat-icon class="bot__dialog__icon">question_mark</mat-icon>
+</button>
