--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,11 +9,11 @@
       <span>Startseite</span>
     </button>
     <button mat-button class="navbar__button">
-      <span class="material-icons">check</span>
+      <span class="material-icons">checklist</span>
       <span>Vorhersagen</span>
     </button>
     <button mat-button class="navbar__button">
-      <span class="material-icons">info</span>
+      <span class="material-icons">login</span>
       <span>Login</span>
     </button>
     <button mat-button class="navbar__button">
