--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,3 +1,10 @@
+.register__login {
+  width: 40rem;
+  margin: 3rem auto auto;
+  box-shadow: rgb(0 0 0 / 8%) 0px 54px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
+  border-radius: 0.5rem;
+}
+
 .example-full-width {
   width: 100%;
 }
