--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<p>Hello</p>
+<div *ngIf="user">Hello {{user.firstName}} {{user.lastName}}</div>
 <button mat-icon-button (click)="openDialog()" class="bot__dialog">
   <mat-icon class="bot__dialog__icon">question_mark</mat-icon>
 </button>
