--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,10 @@
       <span class="material-icons">login</span>
       <span>Login</span>
     </button>
+    <button mat-button class="navbar__button">
+      <span class="material-icons">login</span>
+      <span>Profile</span>
+    </button>
     <button mat-button class="navbar__button" (click)="navigateTo('about')">
       <span class="material-icons">info</span>
     </button>
