--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,5 @@
 .bot__dialog {
-  position: absolute;
+  position: fixed;
   bottom: 2rem;
   right: 2rem;
   z-index: 1000;
@@ -15,4 +15,32 @@
   width: 2rem;
   height: 2rem;
   line-height: 2rem;
+}
+
+.home__container {
+  display: flex;
+  flex-direction: column;
+  //justify-content: space-evenly;
+  //flex-wrap: wrap;
+  //gap: 1rem;
+  //margin: 0.5rem;
+}
+
+.news__container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.matches__container {
+}
+
+.groups__container {
+}
+
+.sections__nav {
+  width: 30rem;
+  background-color: var(--color-1);
+  margin: 3rem auto;
+  padding: 3rem;
+  text-align: center;
 }
