--- a/src/app/components/shared/news/news.component.html
+++ b/src/app/components/shared/news/news.component.html
@@ -1,1 +1,11 @@
-<p>news works!</p>
+<div class="news-item__container">
+  <div class="news-item__title">{{newsItem.title}}</div>
+  <div class="news-item__publish-date">{{newsItem.pubDate}}</div>
+  <div class="news-item__description">
+    {{newsItem.description}}
+    <a href="{{newsItem.link}}" target="_blank">weiter lesen</a>
+  </div>
+  <img src="{{newsItem.image_url}}" alt="News Image" class="news-item__image" *ngIf="newsItem.image_url"/>
+  <img src="assets/fifa_flag.jpg" alt="News Image" class="news-item__image" *ngIf="!newsItem.image_url"/>
+</div>
+
