--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -29,18 +29,16 @@
 .news__container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+
 }
 
 .matches__container {
 }
 
 .groups__container {
-}
-
-.sections__nav {
-  width: 30rem;
-  background-color: var(--color-1);
-  margin: 3rem auto;
-  padding: 3rem;
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
 }
