--- a/src/app/components/shared/group-table/group-table.component.html
+++ b/src/app/components/shared/group-table/group-table.component.html
@@ -1,1 +1,23 @@
-<p>group-table works!</p>
+<div class="group-table">
+  <h1 class="group-table__header">{{'group' | translate}}: {{group}}</h1>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container *ngFor="let displayedColumn of displayedColumns; let i = index">
+      <ng-container matColumnDef="{{displayedColumn}}">
+        <th mat-header-cell *matHeaderCellDef>{{displayedColumnsText[i]}}</th>
+        <td mat-cell *matCellDef="let team">
+          <div class="group-table__logo" *ngIf="displayedColumn == 'flag'">
+            <img src="{{team.flag}}" alt="" class="club__logo--small">
+          </div>
+          <div class="group-table__club-name" *ngIf="displayedColumn == 'name'">
+            {{team.name}}
+          </div>
+          <div class="group-table__club__data" *ngIf="displayedColumn != 'flag' && displayedColumn != 'name'">
+            {{team[displayedColumn]}}
+          </div>
+        </td>
+      </ng-container>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
