--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -20,6 +20,8 @@
 .home__container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   //justify-content: space-evenly;
   //flex-wrap: wrap;
   //gap: 1rem;
@@ -41,4 +43,6 @@
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
+  max-width: 123rem;
+  margin: auto;
 }
