--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,15 +6,19 @@
   --color-3: #49BCE3;
   --color-4: #FEC310;
   --border-color: hsla(0, 39%, 26%, 0.16);
+  --font--weight--light: 'Comfortaa', cursive;
+  --font--weight--bold: 'Teko', sans-serif;
 }
 
 html, body {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-image: url("assets/background.png");
 }
 
 .snackbar {
