--- a/src/app/components/shared/match/match.component.html
+++ b/src/app/components/shared/match/match.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="club__name">{{matchDetails.fistTeam.name}}</div>
-  <img src="{{matchDetails.fistTeam.flag}}" alt="" class="club__logo--small">
+  <img src="{{matchDetails.fistTeam.flag}}" alt="" class="team__flag--small">
   <div>
     {{matchDetails.fistTeam.goals}}
   </div>
@@ -16,7 +16,7 @@
   <div>
     {{matchDetails.secondTeam.goals}}
   </div>
-  <img src="{{matchDetails.secondTeam.flag}}" alt="" class="club__logo--small">
+  <img src="{{matchDetails.secondTeam.flag}}" alt="" class="team__flag--small">
   <div class="club__name">{{matchDetails.secondTeam.name}}</div>
   <div class="match__container--buttons">
     {{matchDetails.date | date: "dd.MM.yyyy"}}
@@ -36,7 +36,7 @@
     <div class="match-date">{{matchDetails.date | date: "dd.MM.yyyy"}}</div>
   </div>
   <div class="cell">
-    <img src="{{matchDetails.fistTeam.flag}}" alt="" class="club__logo--small">
+    <img src="{{matchDetails.fistTeam.flag}}" alt="" class="team__flag--small">
     <div class="club__name">{{matchDetails.fistTeam.name}}</div>
   </div>
   <div class="cell">
@@ -47,7 +47,7 @@
     {{matchDetails.secondTeam.goals}}
   </div>
   <div class="cell">
-    <img src="{{matchDetails.secondTeam.flag}}" alt="" class="club__logo--small">
+    <img src="{{matchDetails.secondTeam.flag}}" alt="" class="team__flag--small">
     <div class="club__name">{{matchDetails.secondTeam.name}}</div>
   </div>
 </div>
