--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,7 @@ body {
   background-color: var(--color-1);
 }
 
-.club__logo--small {
+.team__flag--small {
   height: 1.4rem;
   margin-right: .3rem;
   border: solid 1px var(--border-color);
