admin, roleId added

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -3,6 +3,7 @@
   margin: 3rem auto auto;
   box-shadow: 0 0 39px 7px rgba(0, 0, 0, 0.31);
   border-radius: 0.5rem;
+  background-color: white;
 }
 
 .example-full-width {
