--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,6 @@
 <button mat-icon-button (click)="openDialog()" class="bot__dialog">
   <mat-icon class="bot__dialog__icon">chat</mat-icon>
 </button>
-<!-- -->
 <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
 <div class="home__container" *ngIf="!isLoading">
   <!--
@@ -12,36 +11,42 @@
       <a href="#matches_section">Matches</a>
     </div>
   -->
-  <div class="groups__container" id="groups_section">
-    <div *ngFor="let teamsGroupData of teamsGroupsData; let i = index">
-      <app-group-table [teamsGroupData]="teamsGroupData" [group]="groups[i]">
-      </app-group-table>
+  <!--
+    <div class="groups__container" id="groups_section">
+      <div *ngFor="let teamsGroupData of teamsGroupsData; let i = index">
+        <app-group-table [teamsGroupData]="teamsGroupData" [group]="groups[i]">
+        </app-group-table>
+      </div>
     </div>
-  </div>
+  -->
   <div class="knock-out-stages__container" id="kostages_section">
     Knock out Stages
   </div>
-  <div class="matches__container" id="matches_section">
-    <div class="select-rounds__container">
-      <mat-form-field appearance="fill">
-        <mat-label>{{'selectStage' | translate}}</mat-label>
-        <mat-select [(value)]="selectedStageId">
-          <mat-option *ngFor="let stage of stages" [value]="stage.id">
-            {{stage.stage | titlecase}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div *ngFor="let match of stageMatches">
-      <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails">
-      </app-match>
-    </div>
-  </div>
-  <div class="news__container" id="news_section">
-    <ng-container *ngIf="newsList && !newsErrorText">
-      <div *ngFor="let newsItem of newsList.results">
-        <app-news [newsItem]="newsItem"></app-news>
+  <!--
+      <div class="matches__container" id="matches_section">
+        <div class="select-rounds__container">
+          <mat-form-field appearance="fill">
+            <mat-label>{{'selectStage' | translate}}</mat-label>
+            <mat-select [(value)]="selectedStageId">
+              <mat-option *ngFor="let stage of stages" [value]="stage.id">
+                {{stage.stage | titlecase}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div *ngFor="let match of selectedStageMatches">
+          <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails">
+          </app-match>
+        </div>
       </div>
-    </ng-container>
-  </div>
+  -->
+  <!--
+    <div class="news__container" id="news_section">
+      <ng-container *ngIf="newsList && !newsErrorText">
+        <div *ngFor="let newsItem of newsList.results">
+          <app-news [newsItem]="newsItem"></app-news>
+        </div>
+      </ng-container>
+    </div>
+  -->
 </div>
