--- a/src/app/components/shared/match/match.component.scss
+++ b/src/app/components/shared/match/match.component.scss
@@ -51,7 +51,7 @@
   justify-content: center;
   align-items: center;
 }
-
+/*
 
 @media screen and (max-width: 600px) {
   .match__container {
@@ -118,3 +118,4 @@
   }
 
 }
+*/
